--- a/server/ecs/cloudformation/aqua-ecs-fargate/aqua-ecs-fargate-envoy.yaml
+++ b/server/ecs/cloudformation/aqua-ecs-fargate/aqua-ecs-fargate-envoy.yaml
@@ -8,7 +8,7 @@ Metadata:
       - Label:
           default: ECS Infrastructure Configuration
         Parameters:
-          - EcsClusterName
+          - ClusterName
           - VpcId
           - VpcCidr
           - EcsInstanceSubnets
@@ -37,7 +37,7 @@ Metadata:
           - AuditRdsStorage
           - AuditMultiAzDatabase
     ParameterLabels:
-      EcsClusterName:
+      ClusterName:
         default: ECS cluster name
       Region:
         default: AWS region
@@ -88,9 +88,12 @@ Parameters:
   AquaEnvoyImage:
     Type: String
     Description: Enter envoy image path on ECR
-  EcsClusterName:
-    Description: Existing ECS cluster name
+  ClusterName:
+    Description: Name of ecs cluster to be created
     Type: String
+    MinLength: '5'
+    MaxLength: '25'
+    AllowedPattern: '[a-z0-9-]*'
   VpcId:
     Description: VpcId to deploy into
     Type: 'AWS::EC2::VPC::Id'
@@ -219,6 +222,10 @@ Parameters:
       - 'false'
     ConstraintDescription: Must be either true or false.
 Resources:
+  EcsCluster:
+    Type: AWS::ECS::Cluster
+    Properties:
+      ClusterName: !Ref ClusterName
   AquaConsole:
     Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
     DependsOn:
@@ -226,7 +233,7 @@ Resources:
     Properties:
       Name: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - AquaConsole
       Scheme: internet-facing
       SecurityGroups:
@@ -244,7 +251,7 @@ Resources:
     Properties:
       Family: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-console
       RequiresCompatibilities:
         - FARGATE
@@ -255,7 +262,7 @@ Resources:
       ContainerDefinitions:
         - Name: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - aqua-console
           Image: !Ref AquaServerImage
           PortMappings:
@@ -269,7 +276,7 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Join ['-', ['/aqua/console', !Ref EcsClusterName]]
+              awslogs-group: !Join ['-', ['/aqua/console', !Ref EcsCluster]]
               awslogs-region: !Ref Region
               awslogs-stream-prefix: aquaConsole
           Secrets:
@@ -314,7 +321,7 @@ Resources:
       - AquaConsoleListener
       - AquaConsoleGrpcListener
     Properties:
-      Cluster: !Ref EcsClusterName
+      Cluster: !Ref EcsCluster
       LaunchType: FARGATE
       NetworkConfiguration:
         AwsvpcConfiguration:
@@ -324,7 +331,7 @@ Resources:
           Subnets: !Ref EcsInstanceSubnets
       ServiceName: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-console
       DesiredCount: '1'
       DeploymentConfiguration:
@@ -333,13 +340,13 @@ Resources:
       LoadBalancers:
         - ContainerName: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - aqua-console
           ContainerPort: '8080'
           TargetGroupArn: !Ref AquaConsoleTargetGroup
         - ContainerName: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - aqua-console
           ContainerPort: '8443'
           TargetGroupArn: !Ref AquaConsoleGrpcTargetGroup
@@ -369,7 +376,7 @@ Resources:
         HttpCode: '200'
       Name: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-console
       Port: '8080'
       Protocol: HTTP
@@ -415,7 +422,7 @@ Resources:
       HealthCheckPort: 8443
       Name: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-envoy
       Port: '443'
       Protocol: TCP
@@ -432,7 +439,7 @@ Resources:
       HealthCheckPort: 8443
       Name: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-grpc
       Port: '8443'
       Protocol: TCP
@@ -449,7 +456,7 @@ Resources:
     Properties:
       Family: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-envoy
       NetworkMode: awsvpc
       ExecutionRoleArn: !Ref AquaEcsTaskRole
@@ -461,7 +468,7 @@ Resources:
       ContainerDefinitions:
         - Name: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - aqua-envoy
           Image: !Ref AquaEnvoyImage
           PortMappings:
@@ -472,7 +479,7 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Join ['-', ['/aqua/envoy', !Ref EcsClusterName]]
+              awslogs-group: !Join ['-', ['/aqua/envoy', !Ref EcsCluster]]
               awslogs-region: !Ref Region
               awslogs-stream-prefix: aquaEnvoy
   AquaGatewayTaskDefinition:
@@ -486,7 +493,7 @@ Resources:
     Properties:
       Family: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-gateway
       NetworkMode: awsvpc
       ExecutionRoleArn: !Ref AquaEcsTaskRole
@@ -498,7 +505,7 @@ Resources:
       ContainerDefinitions:
         - Name: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - aqua-gateway
           Image: !Ref AquaGatewayImage
           PortMappings:
@@ -512,7 +519,7 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Join ['-', ['/aqua/gateway', !Ref EcsClusterName]]
+              awslogs-group: !Join ['-', ['/aqua/gateway', !Ref EcsCluster]]
               awslogs-region: !Ref Region
               awslogs-stream-prefix: aquaGateway
           Secrets:
@@ -572,7 +579,7 @@ Resources:
         FailureThreshold: 1
       Name: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-gateway
       NamespaceId: !Ref PrivateNamespace
   AquaGatewayService:
@@ -587,10 +594,10 @@ Resources:
           SecurityGroups:
             - !Ref AquaFargateSecurityGroup
           Subnets: !Ref EcsInstanceSubnets
-      Cluster: !Ref EcsClusterName
+      Cluster: !Ref EcsCluster
       ServiceName: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-gateway
       DesiredCount: '2'
       DeploymentConfiguration:
@@ -615,10 +622,10 @@ Resources:
           SecurityGroups:
             - !Ref AquaFargateSecurityGroup
           Subnets: !Ref EcsInstanceSubnets
-      Cluster: !Ref EcsClusterName
+      Cluster: !Ref EcsCluster
       ServiceName: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-envoy
       DesiredCount: '2'
       DeploymentConfiguration:
@@ -627,7 +634,7 @@ Resources:
       LoadBalancers:
         - ContainerName: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - aqua-envoy
           ContainerPort: '8443'
           TargetGroupArn: !Ref AquaEnvoyTargetGroup
@@ -679,7 +686,7 @@ Resources:
     Properties:
       RoleName: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - AquaEcsTaskRole
       AssumeRolePolicyDocument:
         Version: 2012-10-17
@@ -694,7 +701,7 @@ Resources:
       Policies:
         - PolicyName: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - AquaScannerPolicy
           PolicyDocument:
             Version: 2012-10-17
@@ -715,7 +722,7 @@ Resources:
               - !Ref 'AWS::NoValue'
         - PolicyName: !Join
             - '-'
-            - - !Ref EcsClusterName
+            - - !Ref EcsCluster
               - AquaSecretsManagerPolicy
           PolicyDocument:
             Version: 2012-10-17
@@ -729,24 +736,24 @@ Resources:
   AquaConsoleLogs:
     Type: 'AWS::Logs::LogGroup'
     Properties:
-      LogGroupName: !Join ['-', ['/aqua/console', !Ref EcsClusterName]]
+      LogGroupName: !Join ['-', ['/aqua/console', !Ref EcsCluster]]
       RetentionInDays: 30
   AquaGatewayLogs:
     Type: 'AWS::Logs::LogGroup'
     Properties:
-      LogGroupName: !Join ['-', ['/aqua/gateway', !Ref EcsClusterName]]
+      LogGroupName: !Join ['-', ['/aqua/gateway', !Ref EcsCluster]]
       RetentionInDays: 30
   AquaEnvoyLogs:
     Type: 'AWS::Logs::LogGroup'
     Properties:
-      LogGroupName: !Join ['-', ['/aqua/envoy', !Ref EcsClusterName]]
+      LogGroupName: !Join ['-', ['/aqua/envoy', !Ref EcsCluster]]
       RetentionInDays: 30
   AquaNlb:
     Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
     Properties:
       Name: !Join
         - '-'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - aqua-nlb
       Scheme: internet-facing
       Subnets: !Ref LbSubnets
@@ -767,7 +774,7 @@ Resources:
         - !Ref RdsSecurityGroup
       DBName: !Ref AuditRdsInstanceName
       BackupRetentionPeriod: '7'
-      DBInstanceIdentifier: !Join ['-', ['aquaAuditDb', !Ref EcsClusterName]]
+      DBInstanceIdentifier: !Join ['-', ['aquaAuditDb', !Ref EcsCluster]]
       DBInstanceClass: !Ref AuditRdsInstanceClass
       DBSubnetGroupName: !Ref RdsInstanceSubnetGroup
       Engine: postgres
@@ -789,7 +796,7 @@ Resources:
         - !Ref RdsSecurityGroup
       DBName: !Ref RdsInstanceName
       BackupRetentionPeriod: '7'
-      DBInstanceIdentifier: !Join ['-', ['aquadb', !Ref EcsClusterName]]
+      DBInstanceIdentifier: !Join ['-', ['aquadb', !Ref EcsCluster]]
       DBInstanceClass: !Ref RdsInstanceClass
       DBSubnetGroupName: !Ref RdsInstanceSubnetGroup
       Engine: postgres
@@ -819,7 +826,7 @@ Resources:
       Description: Aqua RDS password
       Name: !Join
         - '/'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - AquaRdsPassword
       SecretString:
         !Ref RdsMasterPassword
@@ -829,7 +836,7 @@ Resources:
       Description: Aqua Audit RDS password
       Name: !Join
         - '/'
-        - - !Ref EcsClusterName
+        - - !Ref EcsCluster
           - AuditAquaRdsPassword
       SecretString:
         !Ref AuditRdsMasterPassword
