--- a/server/ecs/cloudformation/aqua-ecs-fargate/aqua-ecs-fargate-envoy.yaml
+++ b/server/ecs/cloudformation/aqua-ecs-fargate/aqua-ecs-fargate-envoy.yaml
@@ -13,7 +13,6 @@ Metadata:
           - VpcCidr
           - EcsInstanceSubnets
           - LbSubnets
-          - Region
       - Label:
           default: Aqua Security Configuration
         Parameters:
@@ -39,8 +38,6 @@ Metadata:
     ParameterLabels:
       ClusterName:
         default: ECS cluster name
-      Region:
-        default: AWS region
       VpcId:
         default: VPC ID
       VpcCidr:
@@ -76,9 +73,6 @@ Metadata:
       AuditMultiAzDatabase:
         default: Enable Multi-AZ Audit RDS
 Parameters:
-  Region:
-    Type: String
-    Description: AWS region
   AquaServerImage:
     Type: String
     Description: Enter server image path on ECR
@@ -277,7 +271,7 @@ Resources:
             LogDriver: awslogs
             Options:
               awslogs-group: !Join ['-', ['/aqua/console', !Ref EcsCluster]]
-              awslogs-region: !Ref Region
+              awslogs-region: !Ref "AWS::Region"
               awslogs-stream-prefix: aquaConsole
           Secrets:
             - Name: SCALOCK_DBPASSWORD
@@ -480,7 +474,7 @@ Resources:
             LogDriver: awslogs
             Options:
               awslogs-group: !Join ['-', ['/aqua/envoy', !Ref EcsCluster]]
-              awslogs-region: !Ref Region
+              awslogs-region: !Ref "AWS::Region"
               awslogs-stream-prefix: aquaEnvoy
   AquaGatewayTaskDefinition:
     Type: 'AWS::ECS::TaskDefinition'
@@ -520,7 +514,7 @@ Resources:
             LogDriver: awslogs
             Options:
               awslogs-group: !Join ['-', ['/aqua/gateway', !Ref EcsCluster]]
-              awslogs-region: !Ref Region
+              awslogs-region: !Ref "AWS::Region"
               awslogs-stream-prefix: aquaGateway
           Secrets:
             - Name: SCALOCK_DBPASSWORD
